{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 71,
  "lineage": "fa9216be-c16c-17f8-859e-3a35531b7071",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/appgw-backend-pool",
                "ip_addresses": [
                  "172.16.0.4"
                ],
                "name": "appgw-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/appgw-backend-http-settings",
                "name": "appgw-backend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 3000,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/appgw-fe-ip",
                "name": "appgw-fe-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/https-port",
                "name": "https-port",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/subnets/appgw-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/appgw-fe-ip",
                "frontend_ip_configuration_name": "appgw-fe-ip",
                "frontend_port_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/https-port",
                "frontend_port_name": "https-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/appgw-https-listener",
                "name": "appgw-https-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/sslCertificates/appgw-ssl-cert",
                "ssl_certificate_name": "appgw-ssl-cert",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw",
            "identity": [],
            "location": "eastus2",
            "name": "appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/appgw-backend-pool",
                "backend_address_pool_name": "appgw-backend-pool",
                "backend_http_settings_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/appgw-backend-http-settings",
                "backend_http_settings_name": "appgw-backend-http-settings",
                "http_listener_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/appgw-https-listener",
                "http_listener_name": "appgw-https-listener",
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/requestRoutingRules/https-rule",
                "name": "https-rule",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "et-appgw-poc",
            "rewrite_rule_set": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/rewriteRuleSets/ET-POC-rewrite-rules",
                "name": "ET-POC-rewrite-rules",
                "rewrite_rule": [
                  {
                    "condition": [],
                    "name": "add-certificate-sn-header-rule",
                    "request_header_configuration": [
                      {
                        "header_name": "X-CLIENTCERT-SN",
                        "header_value": "{var_client_certificate_serial}"
                      }
                    ],
                    "response_header_configuration": [],
                    "rule_sequence": 200,
                    "url": []
                  },
                  {
                    "condition": [],
                    "name": "add-certificate-issuer-header-rule",
                    "request_header_configuration": [
                      {
                        "header_name": "X-CLIENTCERT-ISSUER",
                        "header_value": "{var_client_certificate_issuer}"
                      }
                    ],
                    "response_header_configuration": [],
                    "rule_sequence": 200,
                    "url": []
                  }
                ]
              }
            ],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIILDgIBAzCCCsoGCSqGSIb3DQEHAaCCCrsEggq3MIIKszCCBhwGCSqGSIb3DQEHAaCCBg0EggYJMIIGBTCCBgEGCyqGSIb3DQEMCgECoIIE/jCCBPowHAYKKoZIhvcNAQwBAzAOBAh+Ne9Ra8FdWAICB9AEggTYe8uSK0I8UOrXIJ+4pqU/9Qd2ZXKUVw+f2YA3iew3KbcmpLVCnLwjBP+KKQIef0r1kKtY4lYu0QEKziGV1AkM/6q0Wr9r92G/75y1CaWIWjGF3BHrWhkFoz7XO5fX9sH/Raj0duUcv85hPGQyf+iixdI1BLpt3yiCg2SLt0hdFzP0qHRu+J+j0I1Vppz2KiGr5F9tCfTyRXbahVJwP0ociszDt7kNwEXDMAE+2Qh+oOkYnTPAas4LTlozMBCCXluF5PZfGsJzfm8lsoL0sYSMn0HHzG2R39IRRp8gUMXOz5X5pE/ll/BZlKMgZah [...]
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/sslCertificates/appgw-ssl-cert",
                "key_vault_secret_id": "",
                "name": "appgw-ssl-cert",
                "password": "myappgwpoc",
                "public_cert_data": "MIIDtwYJKoZIhvcNAQcCoIIDqDCCA6QCAQExADALBgkqhkiG9w0BBwGgggOMMIIDiDCCAnCgAwIBAgIQat5hVE1X8bdLonxhaDpPrDANBgkqhkiG9w0BAQsFADA2MQswCQYDVQQGEwJJTjEOMAwGA1UECgwFRVRQT0MxFzAVBgNVBAMMDm15YXBwZ3dwb2MuY29tMB4XDTI1MDYyMjA2NDgzOFoXDTI3MDYyMjA2NDgzOFowNjELMAkGA1UEBhMCSU4xDjAMBgNVBAoMBUVUUE9DMRcwFQYDVQQDDA5teWFwcGd3cG9jLmNvbTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBALBlBnsJPLPZtuGWuMc7e+5PAfFiGuNHdm+F8KHkdCJqRvD53Jhh9fgBLBs0F8KeUlldkP47urVLVKFq0YJbi+umTRf3dF8U9py1FDf/Has [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/sslProfiles/appgw-ssl-profile",
                "name": "appgw-ssl-profile",
                "ssl_policy": [],
                "trusted_client_certificate_names": [
                  "trusted-root-certificate"
                ],
                "verify_client_cert_issuer_dn": true,
                "verify_client_certificate_revocation": ""
              }
            ],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [
              {
                "data": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlEaURDQ0FuQ2dBd0lCQWdJUWF0NWhWRTFYOGJkTG9ueGhhRHBQckRBTkJna3Foa2lHOXcwQkFRc0ZBREEyDQpNUXN3Q1FZRFZRUUdFd0pKVGpFT01Bd0dBMVVFQ2d3RlJWUlFUME14RnpBVkJnTlZCQU1NRG0xNVlYQndaM2R3DQpiMk11WTI5dE1CNFhEVEkxTURZeU1qQTJORGd6T0ZvWERUSTNNRFl5TWpBMk5EZ3pPRm93TmpFTE1Ba0dBMVVFDQpCaE1DU1U0eERqQU1CZ05WQkFvTUJVVlVVRTlETVJjd0ZRWURWUVFEREE1dGVXRndjR2QzY0c5akxtTnZiVENDDQpBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUxCbEJuc0pQTFBadHVHV3VNYzdlKzV [...]
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/applicationGateways/appgw/trustedClientCertificates/trusted-root-certificate",
                "name": "trusted-root-certificate"
              }
            ],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.appgw_public_ip",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw_subnet",
            "azurerm_virtual_network.routable_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "workload_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/frontendIPConfigurations/workload-lb-frontend",
                "inbound_nat_rules": [
                  "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/inboundNatRules/rdp-nat"
                ],
                "name": "workload-lb-frontend",
                "outbound_rules": [
                  "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/outboundRules/outbound_rule"
                ],
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/publicIPAddresses/workload-lb-public-ip"
              }
            ],
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb",
            "location": "eastus2",
            "name": "workload-lb",
            "resource_group_name": "et-appgw-poc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.workload_lb_public_ip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "workload_lb_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkInterfaces/windows-web-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/backendAddressPools/workload-lb-backend-pool",
            "inbound_nat_rules": [
              "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/inboundNatRules/rdp-nat"
            ],
            "loadbalancer_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb",
            "name": "workload-lb-backend-pool",
            "outbound_rules": [
              "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/outboundRules/outbound_rule"
            ]
          },
          "dependencies": [
            "azurerm_lb.workload_lb",
            "azurerm_public_ip.workload_lb_public_ip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "workload_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb/probes/workload-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/loadBalancers/workload-lb",
            "name": "workload-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.workload_lb",
            "azurerm_public_ip.workload_lb_public_ip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkInterfaces/windows-web-nic",
            "internal_domain_name_suffix": "o5fgo4aoctyu3phu5xbtj4u1lc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "7C-1E-52-A2-A8-9E",
            "name": "windows-web-nic",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "et-appgw-poc",
            "virtual_machine_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Compute/virtualMachines/windows-web-server"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.internal_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkSecurityGroups/workload-nsg",
            "location": "eastus2",
            "name": "workload-nsg",
            "resource_group_name": "et-appgw-poc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.119.184.167",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "appgw-public-ip",
            "resource_group_name": "et-appgw-poc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "workload_lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/publicIPAddresses/workload-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.176.90.12",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "workload-lb-public-ip",
            "resource_group_name": "et-appgw-poc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "et-appgw-poc",
            "virtual_network_name": "internal-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.internal_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/subnets/appgw-subnet",
            "name": "appgw-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "et-appgw-poc",
            "virtual_network_name": "routable-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.routable_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "workload_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/subnets/workload-subnet",
            "name": "workload-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "et-appgw-poc",
            "virtual_network_name": "routable-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.routable_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "workload_subnet_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkSecurityGroups/workload-nsg",
            "subnet_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/subnets/app-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.main",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.internal_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "internal_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7867ca77-140e-4ef1-bcf4-fdc334fa9b5a",
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet",
            "location": "eastus2",
            "name": "internal-vnet",
            "resource_group_name": "et-appgw-poc",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/subnets/app-subnet",
                "name": "app-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/routeTables/rt-app-subnet",
                "security_group": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkSecurityGroups/workload-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "routable_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e27908a3-d55d-44be-ac65-8524ce8141eb",
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet",
            "location": "eastus2",
            "name": "routable-vnet",
            "resource_group_name": "et-appgw-poc",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/subnets/appgw-subnet",
                "name": "appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkSecurityGroups/routable-vnet-appgw-subnet-nsg-eastus2"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/subnets/workload-subnet",
                "name": "workload-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/networkSecurityGroups/routable-vnet-workload-subnet-nsg-eastus2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "internal_to_routable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet/virtualNetworkPeerings/internal-to-routable",
            "name": "internal-to-routable",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet",
            "resource_group_name": "et-appgw-poc",
            "use_remote_gateways": false,
            "virtual_network_name": "internal-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.internal_vnet",
            "azurerm_virtual_network.routable_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "routable_to_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/routable-vnet/virtualNetworkPeerings/routable-to-internal",
            "name": "routable-to-internal",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b7e49fa-4e7f-4873-9be8-3ce6b4dc1caf/resourceGroups/et-appgw-poc/providers/Microsoft.Network/virtualNetworks/internal-vnet",
            "resource_group_name": "et-appgw-poc",
            "use_remote_gateways": false,
            "virtual_network_name": "routable-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.internal_vnet",
            "azurerm_virtual_network.routable_vnet"
          ]
        }
      ]
    }
  ]
}